feat: implement basic grpc server

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "morningfrog.urdf-visualizer",
         "yzhang.markdown-all-in-one",
-        "smilerobotics.urdf"
+        "smilerobotics.urdf",
+        "tamasfe.even-better-toml"
     ]
 }
