--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,4 +40,5 @@ select = [
 ]
 
 [tool.ruff.format] # https://docs.astral.sh/ruff/settings/#format
-quote-style = "double" # 引號風格，雙引號是預設值，這裡只是明示這個設定
+docstring-code-line-length = 100
+quote-style                = "double" # 引號風格，雙引號是預設值，這裡只是明示這個設定
