--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(Protobuf CONFIG REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
 
 #proto
+# https://github.com/protocolbuffers/protobuf/blob/main/docs/cmake_protobuf_generate.md
 add_library(webots-grpc-proto protos/robot.proto protos/device.proto protos/motor.proto)
 target_link_libraries(webots-grpc-proto
     PUBLIC
@@ -13,21 +14,30 @@ target_link_libraries(webots-grpc-proto
         gRPC::grpc
         gRPC::grpc++
 )
+# set(PROTO_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/generated")
+set(PROTO_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}")
+set(PROTO_IMPORT_DIRS "${CMAKE_CURRENT_LIST_DIR}/protos")
 target_include_directories(webots-grpc-proto PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
-get_target_property(grpc_cpp_plugin_location gRPC::grpc_cpp_plugin LOCATION)
 protobuf_generate(
     TARGET webots-grpc-proto 
-    LANGUAGE cpp     
-    PROTOC_OUT_DIR ${CMAKE_CURRENT_BINARY_DIR}
-    IMPORT_DIRS ${CMAKE_CURRENT_LIST_DIR}/protos
+    IMPORT_DIRS ${PROTO_IMPORT_DIRS}
+    PROTOC_OUT_DIR "${PROTO_BINARY_DIR}"
 )
-# message(STATUS "gRPC plugin location: ${grpc_cpp_plugin_location}")
 protobuf_generate(
     TARGET webots-grpc-proto 
     LANGUAGE grpc 
     GENERATE_EXTENSIONS .grpc.pb.h .grpc.pb.cc
-    PLUGIN "protoc-gen-grpc=${grpc_cpp_plugin_location}"
-    IMPORT_DIRS ${CMAKE_CURRENT_LIST_DIR}/protos
+    PLUGIN "protoc-gen-grpc=\$<TARGET_FILE:gRPC::grpc_cpp_plugin>"
+    IMPORT_DIRS ${PROTO_IMPORT_DIRS}
+    PROTOC_OUT_DIR "${PROTO_BINARY_DIR}"
 )
+# Install all generated headers under PROTO_BINARY_DIR
+install(
+    DIRECTORY ${PROTO_BINARY_DIR}/
+    DESTINATION include
+    FILES_MATCHING PATTERN "*.pb.h"
+)
+# Install the library
+install(TARGETS webots-grpc-proto)
 
 add_subdirectory(src)
