chore: build under profiles with shared lib as default option

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -6,20 +6,15 @@ find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 
 # Add the test source file
-set(TEST_SOURCES
-    test_webots_grpc_client.cpp
-)
+set(TEST_SOURCES test_webots_grpc_client.cpp)
 
 # Create the test executable
 add_executable(test_webots_grpc_client ${TEST_SOURCES})
 
 # Link the test executable with the necessary libraries
-target_link_libraries(test_webots_grpc_client
-    PRIVATE
-    GTest::gtest_main
-    GTest::gmock_main
-    webots-grpc-client
-)
+target_link_libraries(
+    test_webots_grpc_client PRIVATE GTest::gtest_main GTest::gmock_main
+                                    webots-grpc-client)
 
-# Add the test to CTest
-# add_test(NAME WebotsGrpcClientTests COMMAND test_webots_grpc_client)
+# Add the test to CTest add_test(NAME WebotsGrpcClientTests COMMAND
+# test_webots_grpc_client)
