--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,19 +1,14 @@
-
 #client
-add_library(webots-grpc-client 
-    device_client.cpp 
-    motor_client.cpp
-    robot_client.cpp
-)
+add_library(webots-grpc-client device_client.cpp motor_client.cpp
+                               robot_client.cpp)
 target_include_directories(webots-grpc-client PUBLIC ${CMAKE_CURRENT_LIST_DIR})
-target_link_libraries(webots-grpc-client
-    PUBLIC
-        webots-grpc-proto
-        gRPC::grpc
-        gRPC::grpc++
-)
-set_target_properties(webots-grpc-client PROPERTIES PUBLIC_HEADER 
-"webots-grpc-client.hpp;motor_client.hpp;device_client.hpp;robot_client.hpp"
+target_link_libraries(webots-grpc-client PUBLIC webots-grpc-proto gRPC::grpc
+                                                gRPC::grpc++)
+set_target_properties(
+    webots-grpc-client
+    PROPERTIES
+        PUBLIC_HEADER
+        "webots-grpc-client.hpp;motor_client.hpp;device_client.hpp;robot_client.hpp"
 )
 install(TARGETS webots-grpc-client)
 
