--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 #client
 add_library(webots-grpc-client device_client.cpp motor_client.cpp
-                               robot_client.cpp)
+                               robot_client.cpp position_sensor_client.cpp)
 target_include_directories(webots-grpc-client PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 target_link_libraries(webots-grpc-client PUBLIC webots-grpc-proto gRPC::grpc
                                                 gRPC::grpc++)
