--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,9 @@ version     = "0.1.0"
 grpcio            = "^1.71.0"
 grpcio-reflection = "^1.0.0"
 ikpy              = "^3.4.2"
-opencv-python     = "^4.10.0.84"
-paho-mqtt         = "^2.1.0"
-pyside6           = "^6.8.0,<6.9.0"
 python            = ">=3.10,<3.14"
+# opencv-python     = "^4.10.0.84"
+# flet              = "^0.27.6"
 
 [tool.poetry.group.dev.dependencies]
 grpcio-tools = "^1.71.0"
