--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ python            = ">=3.10,<3.14"
 grpcio-tools = "^1.71.0"
 ruff         = "^0.11.5"
 urdf2webots  = "^2023.1.0"
+pytest = "^8.4.0"
+pytest-check = "^2.5.3"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
