feat: add motor SetVelocity and its test chore: migrate from poetry to uv

--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,9 @@ poetry.lock
 .pdm-python
 .pdm-build/
 
+# uv
+uv.lock
+
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
@@ -169,3 +172,4 @@ doc/*.html
 
 *Presets.json
 tests/worlds/.linear_motor.jpg
+*.wbproj
