--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,11 @@
 [project]
-name = "webots-grpc"
-version = "0.1.2"
-description = ""
-authors = [{ name = "insleker", email = "bkinnightskytw@gmail.com" }]
+authors         = [{ name = "insleker", email = "bkinnightskytw@gmail.com" }]
+dependencies    = ["grpcio>=1.71.0,<2", "grpcio-reflection>=1.0.0,<2"]
+description     = ""
+name            = "webots-grpc"
+readme          = "README.md"
 requires-python = ">=3.10,<3.14"
-readme = "README.md"
-dependencies = [
-    "grpcio>=1.71.0,<2",
-    "grpcio-reflection>=1.0.0,<2",
-]
+version         = "0.1.2"
 
 [dependency-groups]
 dev = [
@@ -20,8 +17,8 @@ dev = [
 ]
 
 [build-system]
-requires = ["hatchling"]
 build-backend = "hatchling.build"
+requires      = ["hatchling"]
 
 [tool.ruff]
 exclude     = ["**/migrations/", "**/manage.py"]
@@ -38,6 +35,7 @@ select = [
     "I",  # isort
     "UP", # pyupgrade
 ]
+#https://github.com/astral-sh/ruff/discussions/14812#discussioncomment-11505593
 
 [tool.ruff.format]
 docstring-code-line-length = 100
