--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ version         = "0.1.2"
 [dependency-groups]
 dev = [
     "grpcio-tools>=1.71.0,<2",
+    "nuitka>=2.7.14",
     "pytest>=8.4.0,<9",
     "pytest-check>=2.5.3,<3",
     "ruff>=0.11.5,<0.12",
