--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,23 @@
 [project]
-authors         = [{ name = "insleker", email = "bkinnightskytw@gmail.com" }]
-dependencies    = [
+authors     = [{ name = "insleker", email = "bkinnightskytw@gmail.com" }]
+classifiers = []
+# Webots doesn't wrap API as package
+# https://github.com/astral-sh/uv/issues/11175
+# "controller",
+# "controller @ file:///${WEBOTS_HOME}/lib/controller/python",
+dependencies = [
     "grpcio>=1.71.0,<2",
     "grpcio-reflection>=1.0.0,<2",
-    # Webots doesn't wrap API as package
-    # https://github.com/astral-sh/uv/issues/11175
-    # "controller",
-    # "controller @ file:///${WEBOTS_HOME}/lib/controller/python",
     "python-dotenv>=1.1.1",
 ]
-description     = ""
-name            = "webots-grpc"
-readme          = "README.md"
+description = "A gRPC gateway for Webots robot simulation controllers, enabling remote control and integration."
+keywords = ["webots", "grpc", "gateway"]
+license = { text = "MPL-2.0" }
+name = "webots-grpc"
+readme = "README.md"
 requires-python = ">=3.10,<3.14"
-version         = "0.1.2"
+urls = { Homepage = "https://github.com/existedinnettw/webots-grpc", Repository = "https://github.com/existedinnettw/webots-grpc" }
+version = "0.1.2"
 
 [project.scripts]
 webots-grpc-gateway = "webots_grpc.__main__:main"
@@ -27,6 +31,7 @@ dev = [
     "pytest>=8.4.0,<9",
     "pytest-check>=2.5.4,<3",
     "ruff>=0.11.5,<0.12",
+    "twine>=6.2.0",
     "urdf2webots>=2023.1.0,<2024",
 ]
 
